# bertpoems

./: .gitignore  README.md  cudatest.py  pyproject.toml  requirements.txt
app/: bert_ambiguity.ipynb  bert_evaluation.ipynb  bert_insight.ipynb  bert_opt.py  bertclf.py  clustering_embeddings.ipynb  del_poems_stats.ipynb  deutsch_da_ep.out  deutsch_da_ey.out  deutsch_ep.out  deutsch_ey.out  evaluation.ipynb  lsvm_poeta.out  mis_lsvm.out  mlclf.py  mlclf_lsvm.py  nohup.out  poems_preprocessing.ipynb  prose_preprocessing.ipynb  rede_da_ep2.out  rede_da_ey.out  rede_ep.out  rede_ey.out  rede_opt_da_ey.out  rede_opt_ep.out  rede_opt_ey.out  rede_poeta.out  rede_special_ep.out  rede_special_ey.out  rede_special_opt.out  rede_special_orig_ep.out  testbert.py  testing_bert.ipynb  testing_ml.ipynb  todo_multilabel.ipynb  utils.py
corpora/: german_modern_poems_epochpoet.csv  german_modern_poems_epochpoet_alternative.csv  german_modern_poems_epochyear.csv
paper/: hausarbeit_02_06.txt  hausarbeit_11_06.txt  hausarbeit_15_06.txt
results/: lr_cm_ey_poet.csv  lsvm_cm_ep_poet.csv  lsvm_cm_ep_year.csv  lsvm_cm_ey_year.csv  mlcv_poet(04.06.20_05:52).csv  mlcv_poet(09.06.20_03:21).csv  mlcv_poet.csv  mlcv_poeta(28.06.20_15:40).csv  mlcv_year(03.06.20_00:11).csv  mlcv_year(08.06.20_13:43).csv  mlcv_year(09.06.20_12:38).csv  mlcv_year(15.06.20_13:42).csv  mlcv_year.csv  mldurations_poet(04.06.20_05:52).csv  mldurations_poet(09.06.20_03:21).csv  mldurations_poet.csv  mldurations_year(03.06.20_00:11).csv  mldurations_year(08.06.20_13:43).csv  mldurations_year(09.06.20_12:38).csv  (+1 more)
(+667 files in other folders)
